order/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: order
spec:
  host: order
  subsets:
    - name: v1
      labels:
        version: v1
