order/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order
spec:
  hosts:
    - order
  http:
    - route:
        - destination:
            host: order
            subset: v1
